--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Lowercase repository name
         id: lowercase-repo-name
@@ -27,6 +27,7 @@ jobs:
         run: |
             docker buildx create --use
             docker buildx build --tag ghcr.io/${{ steps.lowercase-repo-name.outputs.lowercase }}:latest ./docker
+            docker images
         env:
           DOCKER_BUILDKIT: 1
 
