--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -2,8 +2,7 @@ name: Build and Publish Docker Image
 
 on:
   push:
-    branches: "*"
-    tags: "*"
+    tags: "**"
   workflow_dispatch:
 
 jobs:
@@ -23,15 +22,11 @@ jobs:
         with:
           string: "${{ github.repository }}"
 
-      - name: Build Docker Image
-        run: |
-            docker buildx create --use
-            docker buildx build --tag ghcr.io/${{ steps.lowercase-repo-name.outputs.lowercase }}:latest ./docker
-            docker images
+      - name: Build and Publish Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          context: .docker/Dockerfile
+          file: .docker/Dockerfile
+          tags: ghcr.io/${{ steps.lowercase-repo-name.outputs.lowercase }}:latest
         env:
           DOCKER_BUILDKIT: 1
-
-      - name: Publish Docker Image on Tag
-        if: startsWith(github.ref, 'refs/tags/')
-        run: |
-          docker push ghcr.io/${{ steps.lowercase-repo-name.outputs.lowercase }}:latest
