--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build and Publish Docker Image
         uses: docker/build-push-action@v2
         with:
-          context: .docker/Dockerfile
-          file: .docker/Dockerfile
+          context: ./docker/Dockerfile
+          file: ./docker/Dockerfile
           tags: ghcr.io/${{ steps.lowercase-repo-name.outputs.lowercase }}:latest
         env:
           DOCKER_BUILDKIT: 1
