--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -2,7 +2,7 @@ name: Build and Publish Docker Image
 
 on:
   push:
-    tags: "**"
+    #tags: "**"
   workflow_dispatch:
 
 jobs:
@@ -25,7 +25,7 @@ jobs:
       - name: Build and Publish Docker Image
         uses: docker/build-push-action@v2
         with:
-          context: ./docker/Dockerfile
+          context: .
           file: ./docker/Dockerfile
           tags: ghcr.io/${{ steps.lowercase-repo-name.outputs.lowercase }}:latest
         env:
