--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build and Publish Docker Image
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./docker
           file: ./docker/Dockerfile
           tags: ghcr.io/${{ steps.lowercase-repo-name.outputs.lowercase }}:latest
         env:
