--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -22,6 +22,13 @@ jobs:
         with:
           string: "${{ github.repository }}"
 
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: "ghcr.io"
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and Publish Docker Image
         uses: docker/build-push-action@v2
         with:
