--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -9,26 +9,30 @@ jobs:
   build-and-publish:
     runs-on: ubuntu-latest
 
+    permissions:
+        contents: read
+        packages: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
+  
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
+  
       - name: Lowercase repository name
         id: lowercase-repo-name
         uses: ASzc/change-string-case-action@v2
         with:
           string: "${{ github.repository }}"
-
+  
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
           registry: "ghcr.io"
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
+  
       - name: Build and Publish Docker Image
         uses: docker/build-push-action@v2
         with:
