--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -39,6 +39,6 @@ jobs:
           context: ./docker
           file: ./docker/Dockerfile
           tags: ghcr.io/${{ steps.lowercase-repo-name.outputs.lowercase }}:latest
-          push: true
+          push: ${{ github.ref == "refs/tags" && true || false }}
         env:
           DOCKER_BUILDKIT: 1
