--- a/.github/workflows/build-publish-image.yml
+++ b/.github/workflows/build-publish-image.yml
@@ -2,7 +2,8 @@ name: Build and Publish Docker Image
 
 on:
   push:
-    #tags: "**"
+    branches: "**"
+    tags: "**"
   workflow_dispatch:
 
 jobs:
@@ -32,13 +33,19 @@ jobs:
           registry: "ghcr.io"
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ steps.lowercase-repo-name.outputs.lowercase }}
   
       - name: Build and Publish Docker Image
         uses: docker/build-push-action@v2
         with:
           context: ./docker
           file: ./docker/Dockerfile
-          tags: ghcr.io/${{ steps.lowercase-repo-name.outputs.lowercase }}:latest
+          tags: ${{ steps.meta.outputs.tags }}
           push: ${{ startsWith(github.ref, 'refs/tags/') && true || false }}
         env:
           DOCKER_BUILDKIT: 1
